<resources>
    <string name="app_name">Rom Control</string>
    <string name="carrierlabeldefault">Custom Text</string>
    <string name="lockdefaultcarrier"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dialog_color_picker">Pick Color</string>
    <string name="press_color_to_apply">Press to apply</string>
    <string name="root_progress_dialog_title">Acquiring Root Access</string>
    <string name="root_progress_dialog_message">Please wait…</string>
    <string name="no_su_dialog_title">No root privileges</string>
    <string name="no_su_dialog_message">We could not acquire root access on your device.\n\nMost of this app\'s functions can be performed without root access. However, you might experience problems with running scripts or rebooting.\n\nWe strongly recommend to allow root access on next request or allow such access in your Su client manually.</string>
    <string name="no_su_dialog_dismiss_button_text">Whatever, man</string>
    <string name="command_executed_success_toast">Executed successfully</string>
    <string name="root_tools_exception_toast">File not found or root denied</string>
    <string name="reboot_menu">Reboot menu</string>
    <string name="reboot_device_text">Reboot Device</string>
    <string name="reboot_recovery_text">Reboot Recovery</string>
    <string name="reboot_ui_text">Reboot SystemUI</string>
    <string name="app_reboot_required_dialog_title">App reboot required</string>
    <string name="app_reboot_required_dialog_message">For this action to take effect it is required to restart %1$s.\n\nPress OK to restart now</string>
    <string name="changelog_version_title">ROM version: %1$s</string>
    <string name="backup_restore_dialog_title">Backup/Restore Rom Control system data</string>
    <string name="choose_backup_dialog_title">Please choose backup to restore</string>
    <string name="no_backup_dialog_title">No backup found on this device</string>
    <string name="no_backup_dialog_message">Would you like to create new backup now?</string>
    <string name="restore_confirm_dialog_title">Please confirm restore</string>
    <string name="restore_confirm_message">You have chosen to restore data from previous Rom Control preferences.\n\n<b>Please note! This operation will change your device settings based on the settings stored in this file.\n\n<font fgcolor="red">DO NOT PROCEED unless absolutely sure!!!</font></b>\n\nRom Control will close to allow data restoration and reopen again upon its completion. Depending on the amount of your settings this may take some time.\n\nPlease click \"CONFIRM\" to proceed or \"CANCEL\" to quit.</string>
    <string name="backup_complete_toast">Backup completed successfully. The backup file can be found at\n%1$s</string>
    <string name="backup_file_prefix_date_format" translatable="false">dd-MM-yy_HH:mm</string>
    <string name="backup_file_suffix" translatable="false">_RCBackup</string>
    <string name="restore_complete_toast">Restore complete</string>
    <string name="systemui_prefs">SystemUI prefs</string>
    <string name="phone_prefs">Phone prefs</string>
    <string name="framework_prefs">Framework prefs</string>
    <string name="notification_panel_prefs">Notification panel prefs</string>
    <string name="more_options">More options</string>
    <string name="changelog">Changelog</string>
    <string name="about_us">About us</string>
    <string name="confirm_script_dialog_message">"Are you sure you want to run %1$s?"</string>
    <string name="run_script_confirm_dialog_title">Confirmation required</string>
    <string name="run_script_confirm_dialog_positive_button">Yes, run</string>
    <string name="find_app">Find App</string>
    <string name="reboot_required_dialog_title">Device reboot required</string>
    <string name="reboot_required_dialog_message">For this action to take effect, full device reboot is required. Would you like to reboot now?</string>
    <string name="reboot_later_negative_button">later</string>
    <string name="reboot_now_dialog_button">reboot now</string>
    <string name="imminent_reboot_warning">Your device will reboot IMMEDIATELY upon script completion!!!</string>
    <string name="restore_dialog_description">This action will restore the following items to stock colors</string>
    <string name="statusbar_prefs">Statusbar Mods</string>
    <string name="lockscreen_prefs">Lockscreen Mods</string>
    <string name="sound_mod_panel_prefs">Sound Mod Panel</string>
    <string name="theme_dialog_title">Choose theme</string>
    <string name="usefull_apps_prefs">Useful Apps</string>
    <string name="utilites_prefs">Utilities</string>
    <string name="launcher_prefs">TouchWiz Launcher Settings</string>
    <string name="set_theme">Set Theme</string>
    <string name="backup_device_prefs">Backup Device Databases</string>
    <string name="backup_and_restore">Backup &amp; Restore</string>
    <string name="buttons_swipe_prefs">Soft + Virtual Key Settings</string>
    <string name="adv_device_mods_prefs">Advanced Device Mods</string>
    <string name="listview_accelerate_decelerate_interpolator">Accelerate decelerate</string>
    <string name="listview_accelerate_interpolator">Accelerate</string>
    <string name="listview_alpha">Alpha</string>
    <string name="listview_anticipate_interpolator">Anticipate</string>
    <string name="listview_anticipate_overshoot_interpolator">Anticipate overshoot</string>
    <string name="listview_bounce_interpolator">Bounce</string>
    <string name="listview_decelerate_interpolator">Decelerate</string>
    <string name="listview_fold">Fold</string>
    <string name="listview_off">Off</string>
    <string name="listview_overshoot_interpolator">Overshoot</string>
    <string name="listview_rotate">Rotate</string>
    <string name="listview_scale">Scale</string>
    <string name="listview_stack_bottom">Stack (bottom)</string>
    <string name="listview_stack_top">Stack (top)</string>
    <string name="listview_translate_left">Translate (left)</string>
    <string name="listview_translate_right">Translate (right)</string>
    <string name="listview_unfold">Unfold</string>
    <string name="listview_wave_left">Wave (left)</string>
    <string name="listview_wave_right">Wave (right)</string>
    <string name="volbtn_music_controls_summary">Customize volume rocker action</string>
    <string name="volbtn_music_controls_title">Music Control</string>
    <string name="volbtn_timeout_summary">%s</string>
    <string name="volbtn_timeout_title">Button delay</string>
    <string name="volbtn_toggle_title">Music Control</string>
    <string name="volbtn_vol_down_summary">%s</string>
    <string name="volbtn_vol_down_title">Volume Down action</string>
    <string name="volbtn_vol_up_summary">%s</string>
    <string name="volbtn_vol_up_title">Volume Up action</string>
    <string name="weekday_pm_am_summary">%s</string>
    <string name="clock_position_summary">%s</string>
    <string name="toast_animation_title">Toast animations</string>
    <string name="toast_none_animation">None</string>
    <string name="toast_default_animation">Default</string>
    <string name="toast_fade_animation">Fade Animation</string>
    <string name="toast_SlideRight_animation">SlideRight Animation</string>
    <string name="toast_SlideLeft_animation">SlideLeft Animation</string>
    <string name="toast_Xylon_animation">Xylon Animation</string>
    <string name="toast_Toko_animation">Toko Animation</string>
    <string name="toast_Tn_animation">Tn Animation</string>
    <string name="toast_Honami_animation">Honami Animation</string>
    <string name="toast_FastFade_animation">FastFade Animation</string>
    <string name="toast_GrowFade_animation">GrowFade Animation</string>
    <string name="toast_GrowFadeCenter_animation">GrowFadeCenter Animation</string>
    <string name="toast_GrowFadeBottom_animation">GrowFadeBottom Animation</string>
    <string name="toast_Translucent_animation">Translucent Animation</string>
    <string name="toast_SlideLeftRight_animation">Slide Left To Right Animation</string>
    <string name="toast_SlideRightLeft_animation">Slide Right To Left Animation</string>
    <string name="ime_animation_test_title">Test IME Animation Here</string>
    <string name="dsb_gradient_filter_value_0">Off</string>
    <string name="dsb_gradient_filter_value_1">Only on the desktop</string>
    <string name="dsb_gradient_filter_value_2">Everywhere except the desktop</string>
    <string name="dsb_gradient_filter_value_3">On</string>
    <string name="dynamic_status_bar_filter_summary">Overlay a darkening filter on the status bar</string>
    <string name="dynamic_status_bar_filter_title">Darkening</string>
    <string name="dynamic_status_bar_gradient_summary">Overlay a gradient on the status bar</string>
    <string name="dynamic_status_bar_gradient_title">Gradient</string>
    <string name="dynamic_status_bar_title">Dynamic status bar</string>
    <string name="qs_anim_title">QS animations</string>
    <string name="qs_anim_summary">customize quick settings animation</string>
    <string name="quicksettings_tiles_category">Tile animation options</string>
    <string name="qs_tile_animation_style_title">Tiles animation style</string>
    <string name="qs_tile_animation_duration_title">Tiles animation duration</string>
    <string name="qs_tile_animation_interpolator_title">Tiles animation interpolator</string>
    <string name="qs_tile_animation_style_off">No animation</string>
    <string name="qs_tile_animation_style_flip">Flip</string>
    <string name="qs_tile_animation_style_rotate">Rotate</string>
    <string name="qs_tile_animation_duration_low">Low</string>
    <string name="qs_tile_animation_duration_default">Default</string>
    <string name="qs_tile_animation_duration_fast">Fast</string>
    <string name="qs_tile_animation_interpolator_linearInterpolator">Linear</string>
    <string name="qs_tile_animation_interpolator_accelerateInterpolator">Accelerate</string>
    <string name="qs_tile_animation_interpolator_decelerateInterpolator">Decelerate</string>
    <string name="qs_tile_animation_interpolator_accelerateDecelerateInterpolator">Accelerate decelerate</string>
    <string name="qs_tile_animation_interpolator_bounceInterpolator">Bounce</string>
    <string name="qs_tile_animation_interpolator_overshootInterpolator">Overshoot</string>
    <string name="qs_tile_animation_interpolator_anticipateInterpolator">Anticipate</string>
    <string name="qs_tile_animation_interpolator_anticipateOvershootInterpolator">Anticipate overshoot</string>
    <string name="qs_tile_animation_duration_superfast">Superfast</string>
    <string name="qs_set_animation_style">%1$s</string>
    <string name="qs_set_animation_duration">%1$s</string>
    <string name="qs_set_animation_interpolator">%1$s</string>
    <string name="expansion_view_animation_title">Task Manager Animation</string>
    <string name="expansion_view_animation_summary">Change the enter/exit animation of the panel change</string>
    <string name="expansion_view_animation_dialog_title">Select your animation</string>
    <string name="expansion_view_animation_down">Down (Default)</string>
    <string name="expansion_view_animation_enter">Enter</string>
    <string name="expansion_view_animation_left">Left</string>
    <string name="expansion_view_animation_right">Right</string>
    <string name="expansion_view_animation_rotate">Rotate</string>
    <string name="expansion_view_animation_turn">Turn</string>
    <string name="expansion_view_animation_up">Up</string>
    <string name="expansion_view_recents_enter">Recents Enter</string>
    <string name="expansion_view_fade">Fade</string>
    <string name="expansion_view_slide_out">Slide</string>
    <string name="expansion_view_last_app">Last App</string>
</resources>