<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:phronesis="http://schemas.android.com/apk/res-auto">
    <PreferenceScreen
        android:layout_width="fill_parent"
        android:layout_height="200.0dip"
        android:layout="@layout/soundpanel_logo" />
    <com.wubydax.romcontrol.v2.prefs.OpenAppPreference
        android:title="Samsung Music Player"
        phronesis:componentName="com.sec.android.app.music/com.sec.android.app.music.common.activity.MusicMainActivity" />
    <com.wubydax.romcontrol.v2.prefs.OpenAppPreference
        android:title="Beats Audio"
        phronesis:componentName="com.zloban.beatsfx/com.zloban.beatsfx.beatsAudioControlPanelActivity" />
    <com.wubydax.romcontrol.v2.prefs.OpenAppPreference
        android:title="Viper4Android"
        phronesis:componentName="com.audlabs.viperfx/com.audlabs.viperfx.main.MainActivity" />
    <com.wubydax.romcontrol.v2.prefs.OpenAppPreference
        android:title="Dolby Atmos"
        phronesis:componentName="com.atmos.daxappUI/com.atmos.daxappUI.MainActivity" />
    <com.wubydax.romcontrol.v2.prefs.OpenAppPreference
        android:title="Samsung Soundalive"
        phronesis:componentName="com.sec.android.app.soundalive/com.sec.android.app.soundalive.SAControlPanelActivity" />
    <PreferenceCategory
        android:layout="@layout/preferences_category"
        android:title="Screen Off Music Control" />
    <PreferenceScreen
        android:icon="@drawable/music_control"
        android:summary="@string/volbtn_music_controls_summary"
        android:title="@string/volbtn_music_controls_title">
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="volbtn_music_controls"
            android:title="@string/volbtn_toggle_title" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="400"
            android:dependency="volbtn_music_controls"
            android:entries="@array/volbtn_timeout_entries"
            android:entryValues="@array/volbtn_timeout_values"
            android:key="volbtn_timeout"
            android:title="@string/volbtn_timeout_title" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="87"
            android:dependency="volbtn_music_controls"
            android:entries="@array/volbtn_action_entries"
            android:entryValues="@array/volbtn_action_values"
            android:key="volbtn_vol_up"
            android:title="@string/volbtn_vol_up_title" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="88"
            android:dependency="volbtn_music_controls"
            android:entries="@array/volbtn_action_entries"
            android:entryValues="@array/volbtn_action_values"
            android:key="volbtn_vol_down"
            android:title="@string/volbtn_vol_down_title" />
    </PreferenceScreen>
    <PreferenceCategory
        android:layout="@layout/preferences_category"
        android:title="Loud Volume Warning Toggle" />
    <PreferenceScreen
        android:icon="@drawable/volumewarning"
        android:summary="Loud Volume Warning Toggle"
        android:title="Loud Volume Warning">
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference
            android:defaultValue="0"
            android:key="volume_warning_toggle"
            android:summaryOff="Volume Warning Currently Enabled"
            android:summaryOn="Volume Warning Currently Disabled"
            android:title="Loud Volume Warning" />
    </PreferenceScreen>
    <PreferenceCategory
        android:layout="@layout/preferences_category"
        android:title="Volume Dialog Custom Colors" />
    <PreferenceScreen
        android:summary="Loud Volume Warning Toggle"
        android:title="Volume panel custom colors">
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
            android:defaultValue="-328966"
            android:key="volume_panel_color"
            android:title="Volume Panel Background" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
            android:defaultValue="-14606047"
            android:key="volume_title_color"
            android:title="Volume Panel Text" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
            android:defaultValue="-6381922"
            android:key="volume_icon_color"
            android:title="Volume Panel Icons" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
            android:defaultValue="-11549705"
            android:key="volume_thumb_color"
            android:title="Volume Panel Thumb" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
            android:defaultValue="-2039584"
            android:key="volume_progress_bar_bg_color"
            android:title="Volume Progress bar Background" />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference
            android:defaultValue="-11549705"
            android:key="volume_progress_bar_color"
            android:title="Volume Progress bar Foreground" />
        <com.wubydax.romcontrol.v2.prefs.GlobalRestorePreference
            android:icon="@drawable/restorecolour"
            android:summary="This action will restore Volume colors to Stock"
            android:title="Restore colors to stock values"
            phronesis:keysList="@array/restore_volumepanel_colors_keys"
            phronesis:packageNameToKill="com.android.systemui"
            phronesis:titlesList="@array/restore_volumepanel_colors_titles"
            phronesis:valuesList="@array/restore_volumepanel_colors_values" />
    </PreferenceScreen>
    <PreferenceCategory
        android:layout="@layout/preferences_category"
        android:title="Volume Panel Expanded Timeout Delay" />
    <PreferenceScreen
        android:summary="Volume Panel Expanded Timeout Delay Mod"
        android:title="Volume Panel Expanded Timeout Delay">
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="3000"
            android:entries="@array/volpanel_timeout_pulsar_entries"
            android:entryValues="@array/volpanel_timeout_values"
            android:key="volume_panel_expanded_timeout"
            android:title="Volume Panel Popup Timeout Delay" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference
            android:defaultValue="5000"
            android:entries="@array/volpanel_timeout_entries"
            android:entryValues="@array/volpanel_timeout_values"
            android:key="volpanel_timeout"
            android:title="Volume Panel Expand Timeout Delay" />
    </PreferenceScreen>
</PreferenceScreen>